--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 'ScentSutra'
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
 path: ''
-url:  ''
+url:  'https://arnavpuri.github.io/scentsutra/'
 
 facebook: 'ScentSutra'
 
