--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,14 @@ title: 'ScentSutra'
 ## note: 
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
-path: '/scentsutra/'
-url:  'https://arnavpuri.github.io/scentsutra/'
-
+#path: '/scentsutra/'
+#url:  'https://arnavpuri.github.io/scentsutra/'
+path: '/'
+url: ''
 facebook: 'ScentSutra'
 
+collections:
+  products:
 ########
 # more settings
 
@@ -18,7 +21,7 @@ markdown: kramdown
 
 sass:
   sass_dir: css
-  style:    compressed
+  style: compressed
 
 
 
@@ -26,6 +29,4 @@ exclude:
 - README.md
 
 
-safe: true
-lsi: false
 
