--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: 'ScentSutra'
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
 path: '/scentsutra/'
 url:  'https://arnavpuri.github.io/scentsutra/'
-# path: '/'
+# path: ''
 # url: ''
 facebook: 'ScentSutra'
 
