--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ title: 'ScentSutra'
 ## note: 
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
-# path: '/scentsutra/'
-# url:  'https://arnavpuri.github.io/scentsutra/'
-path: ''
-url: ''
+path: '/scentsutra/'
+url:  'https://arnavpuri.github.io/scentsutra/'
+# path: ''
+# url: ''
 facebook: 'ScentSutra'
 instagram: 'scent_sutra'
 
