Mobile responsiveness added

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ url:  'http://scentsutra.com'
 # url: ''
 facebook: 'ScentSutra'
 instagram: 'scent_sutra'
+twitter: '@ScentSutra'
 
 collections:
   products:
